# shell_command_launcher

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
docs/: conf.py  index.md
docs/get_started/: changelog.md  installation.md  usage.md
shell_command_launcher/: __init__.py  shell_command_launcher.py
tests/: test_iter_arg_dict.py
